Aftercare admin panel and upload form added

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 body {
   background-color: #fff9f1;
   color: #4c4d4f;
-  font-family: Cabin;
+  font-family: "Cabin", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
